= HEAD

* Don't modify SCRIPT_NAME/PATH_INFO during routing, merging static_path_info plugin into core (jeremyevans)

* Remove code deprecated in Roda 1.3.0 (jeremyevans)

= 1.3.0 (2015-01-13)

* Make static_path_info plugin restore original SCRIPT_NAME/PATH_INFO before returning from r.run (jeremyevans)

* Add RodaMajorVersion, RodaMinorVersion, and RodaPatchVersion (jeremyevans)

* Add delete_empty_headers plugin for deleting response headers that are empty before return response (jeremyevans)

* Make freeze class method freeze internal data structures to avoid thread safety issues (jeremyevans)

* Deprecate mutating plugin option hashes for chunked, default_headers, error_email, json, and render plugins (jeremyevans)

* Fix subclassing app and using r.multi_run in subclass in multi_run plugin (jeremyevans)

* Support :classes option in json plugin to set the classes to use (jeremyevans)

* Improve performance in default_headers plugin by not duping the headers (jeremyevans)

* Use :template_opts instead of :opts for providing options to the template in the render plugin (jeremyevans)

* Support :match_header_yield Roda option in the header_matchers plugin, causing the :header match to yield the value (jeremyevans)

* Move :param and :param! hash matchers to the param_matchers plugin (jeremyevans)

* Add path_matchers plugin, for :extension, :prefix, and :suffix hash matchers (jeremyevans)

* Move Roda.hash_matcher to hash_matcher plugin (jeremyevans)

* Move Roda.request_module and .response_module to module_include plugin (jeremyevans)

* Move RodaResponse#set_cookie and #delete_cookie to cookies plugin (jeremyevans)

* Deprecate RodaRequest#full_path_info, use #path instead (jeremyevans)

* Add class_delegate to the delegate plugin (jeremyevans)

* Make not_found plugin clear headers for response if it is not found (jeremyevans)

* Make error_handler plugin use a new response instead of reusing existing response (jeremyevans)
