@@ -1,5 +1,7 @@
 = HEAD
 
+* Remove keep_remaining_path/update_remaining_path private request methods (jeremyevans)
+
 * Don't modify SCRIPT_NAME/PATH_INFO during routing, merging static_path_info plugin into core (jeremyevans)
 
 * Remove code deprecated in Roda 1.3.0 (jeremyevans)
